# otlingam

./: CITATION.cff  README.md  demo.py  pyproject.toml  run-all.py
.github/workflows/: lint.yml  pages.yml  publish.yml  test.yml
docs/source/: conf.py  index.rst  models.rst  modules.rst  utils.rst
docs/source/_templates/autosummary/: class.rst
exactdag/: __init__.py  _base.py  _greedy.py  _metrics.py
optidag/: __init__.py  _exhaustive.py  _greedy.py  _utils.py
optidag/__pycache__/: _exhaustive._sink_dp-159.py313.1.nbc  _exhaustive._sink_dp-159.py313.2.nbc  _exhaustive._sink_dp-159.py313.nbi
otdag/: __init__.py  _exhaustive.py  _greedy.py  _utils.py
otlingam/: __init__.py  _exhaustive.py  _greedy.py  _ica.py  _utils.py
otlingam/__pycache__/: _exhaustive._cholesky_solve_norm_inplace-51.py313.1.nbc  _exhaustive._cholesky_solve_norm_inplace-51.py313.nbi  _exhaustive._compute_residuals-101.py313.1.nbc  _exhaustive._compute_residuals-101.py313.nbi  _exhaustive._get_A_num-13.py313.1.nbc  _exhaustive._get_A_num-13.py313.nbi  _exhaustive._score-126.py313.1.nbc  _exhaustive._score-126.py313.nbi  _exhaustive._sink_dp-161.py313.1.nbc  _exhaustive._sink_dp-161.py313.nbi  _exhaustive._solve_coef-78.py313.1.nbc  _exhaustive._solve_coef-78.py313.nbi
otlingam/models/: __init__.py  _exhaustive.py  _greedy.py  _ica.py  _utils.py
otlingam/utils/: __init__.py  _metrics.py  _wasserstein.py
scripts/: requirements.txt  runtime-scaling.py  statistical-performance.py  utils.py
tests/: __init__.py  _utils.py  test_estimators.py  test_exhaustive.py  test_utils.py
