[project]
name = "otlingam"
description = "Optimal transport-based causal discovery using Wasserstein non-Gaussianity"
readme = "README.md"
urls = { "Source" = "https://github.com/felixlaplante0/otlingam" }
authors = [{ name = "Félix Laplante" }]
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = ["numpy", "numba", "scikit-learn", "lingam", "otica"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["otlingam"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
otlingam = ["py.typed"]

[tool.ruff]
extend-exclude = ["scripts"]
lint.select = [
    "D",   # pydocstyle (docstring conventions)
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
lint.ignore = ["D417", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
